# advent-of-code-2024

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yaml
c/: day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  helpers.h
cpp/: day01.cc  day02.cc  day03.cc  day04.cc  day05.cc  day06.cc  day07.cc  day08.cc  day09.cc  day10.cc  day11.cc  helpers.h
crates/day01/: .response  Cargo.toml
crates/day01/src/: main.rs
crates/day02/: .response  Cargo.toml
crates/day02/src/: main.rs
crates/day03/: .response  Cargo.toml
crates/day03/src/: main.rs
crates/day04/: Cargo.toml
crates/day04/src/: main.rs
crates/day05/: Cargo.toml
crates/day05/src/: main.rs
crates/day06/: Cargo.toml
crates/day06/src/: main.rs
crates/day07/: Cargo.toml
crates/day07/src/: main.rs
crates/day08/: .response  Cargo.toml
crates/day08/src/: main.rs
crates/day09/: .response  Cargo.toml
crates/day09/src/: main.rs
crates/day10/: Cargo.toml
crates/day10/src/: main.rs
crates/day11/: Cargo.toml
crates/day11/src/: main.rs
crates/helpers/: Cargo.toml
crates/helpers/src/: lib.rs
perf/: README.md  pyproject.toml  run-perf.py
perf/day01/: c-clang-O3.txt  c-clang.txt  c-gcc-O3.txt  c-gcc.txt  cpp-clang++-O3.txt  cpp-clang++.txt  cpp-g++-O3.txt  cpp-g++.txt  rust-unstable.txt  rust.txt
