[workspace]
resolver = "2"
members = [
    "crates/day01",
    "crates/day02",
    "crates/day03",
    "crates/day04",
    "crates/day05",
    "crates/day06",
    "crates/day07",
    "crates/day08",
    "crates/day09",
    "crates/helpers",
]

[workspace.dependencies]
regex = "1.11.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = { level = "deny", priority = 2 }
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 0 }
