[package]
name = "day03"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
regex = { workspace = true, optional = true }
helpers = { path = "../helpers"}

[features]
regex=["dep:regex"]